fixed some issues with keyboard on mobile

--- a/frontend/src/Keyboard.css
+++ b/frontend/src/Keyboard.css
@@ -1,8 +1,21 @@
+.red{
+    color: red;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+.yellow{
+    color: yellow;
+    margin-top: 10px;
+    margin-bottom: 0px;
+}
 .keyboard-container {
     display: flex;
     flex-wrap: wrap; /* Allow the boxes to wrap if they exceed the container's width */
     justify-content: center; /* Center the boxes horizontally */
-    gap: 20px;
-    margin-left: 200px;
-    margin-right: 200px;
+    gap: 10px;
+    margin-top: 30px;
 }
+.keyboard-break {
+    flex-basis: 100%;
+    height: 0;
+  }
